--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development backpack dev",
     "build": "nuxt build && backpack build",
+    "prestart": "npm run build",
     "start": "cross-env NODE_ENV=production node build/main.js",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
