--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "cross-env NODE_ENV=development backpack dev",
     "build": "nuxt build && backpack build",
     "prestart": "npm run build",
-    "start": "cross-env NODE_ENV=production node build/main.js",
+    "start": "cross-env node build/main.js",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint",
@@ -30,9 +30,11 @@
     "@feathersjs/socketio-client": "^1.1.0",
     "@nuxtjs/bulma": "^1.0.3",
     "@nuxtjs/font-awesome": "^1.0.3",
+    "backpack-core": "^0.7.0",
     "body-parser": "^1.18.2",
     "compression": "^1.7.2",
     "cors": "^2.8.4",
+    "cross-env": "^5.0.1",
     "feathers-errors": "^2.9.2",
     "feathers-memory": "^2.1.1",
     "feathers-reactive": "^0.6.0",
@@ -46,8 +48,6 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
-    "backpack-core": "^0.7.0",
-    "cross-env": "^5.0.1",
     "eslint": "^4.15.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-vue": "^4.0.0"
